--- a/notebooks/environment.yml
+++ b/notebooks/environment.yml
@@ -1,6 +1,9 @@
 channels:
   - defaults
 dependencies:
-  - python=3.*
+  - python=3.7
   - pip=20.3.*
   - jupyter
+  - pip:
+      - pytest
+      - pytest-pycharm
