--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -1,14 +1,2 @@
-torch
-tqdm
-torchtext
-tensorboard
-numpy
-spacy
-scipy
-pandas
-tables
-pdpipe
-setuptools
-pep517
-nltk
-sklearn
+-r requirements/common.txt
+-r requirements/dev.txt
