--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.2.0",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
+    "@react-pdf-viewer/core": "^2.4.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.1",
+    "date-fns": "^2.19.0",
     "form-data": "^3.0.0",
     "gh-pages": "^3.1.0",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "pdfjs-dist": "^2.6.347",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
