--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/avpd:${{ (date +%Y%m%d) }}.${{ env.GITHUB_SHA }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/avpd:${{ env.GITHUB_SHA }}
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/avpd:dev
       -
         name: Image digest
