--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/avpd:${{ env.GITHUB_SHA }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/avpd:dev
+          tags: | 
+            ${{ secrets.DOCKERHUB_USERNAME }}/avpd:${{ env.GITHUB_SHA }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/avpd:dev
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
