--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Debug
+        run: echo ${{ secrets.DOCKERHUB_USERNAME }}/avpd:${{ env.GITHUB_SHA }}
+      -
         name: Build and push backend
         id: docker_build
         uses: docker/build-push-action@v2
