--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Debug
-        run: echo ${{ secrets.DOCKERHUB_USERNAME }}/avpd:${{ GITHUB_SHA }}
+        run: echo ${{ secrets.DOCKERHUB_USERNAME }}/avpd:${{ env.GITHUB_RUN_ID }}
       -
         name: Build and push backend
         id: docker_build
