--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         env:
-          GITHUB_SHA: "$GITHUB_SHA"
+          GITHUB_SHA: $GITHUB_SHA
         with:
           push: true
           file: backend/Dockerfile
