--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,13 +22,11 @@ jobs:
         name: Build and push backend
         id: docker_build
         uses: docker/build-push-action@v2
-        env:
-          GITHUB_SHA: $GITHUB_SHA
         with:
           push: true
           file: backend/Dockerfile
           tags: | 
-            grchr/avpd-backend:main.${{env.GITHUB_SHA}}
+            grchr/avpd-backend:main.${{github.GITHUB_SHA}}
             grchr/avpd-backend:dev
       -
         name: Image digest
