--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           push: true
           file: backend/Dockerfile
           tags: | 
-            grchr/avpd-backend:main.${{github.GITHUB_SHA}}
+            grchr/avpd-backend:main.${{github.sha}}
             grchr/avpd-backend:dev
       -
         name: Image digest
