--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,16 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Create service key file
+        run: echo ${{ secrets.GCLOUD_AUTH }} > ~./sa-private-key.json
+      -
+        name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: team-25-avpd
+          service_account_key: ${{ secrets.GCLOUD_AUTH }}
+          export_default_credentials: true
+      -
         name: Build and push backend
         id: docker_build
         uses: docker/build-push-action@v2
@@ -29,21 +39,20 @@ jobs:
           tags: | 
             grchr/avpd-backend:main.${{github.sha}}
             grchr/avpd-backend:dev
+            gcr.io/team-25-avpd/gchristensen/avpd-backend:main.${{github.sha}}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-  test:
+  deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
       -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Test backend
-        id: docker_build
-        uses: docker/build-push-action@v2
+        name: Deploy service to Cloud Run
+        uses: stefda/action-cloud-run@v1.2
         with:
-          push: false
-          file: backend/Dockerfile
-          target: test
+          image: gcr.io/team-25-avpd/gchristensen/avpd-backend:main.${{github.sha}}
+          service: avpd-backend-dev
+          project: team-25-avpd
+          region: us-west1
+          service key: ${{ secrets.GCLOUD_AUTH }}
