--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       -
         name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@1.0.2
         with:
           driver-opts: image=moby/buildkit:buildx-stable-1
       -
@@ -23,7 +23,7 @@ jobs:
       -
         name: Get GCloud Credentials
         id: gcloud
-        uses: elgohr/gcloud-login-action@master
+        uses: elgohr/gcloud-login-action@0.2
         with:
           account_key: ${{ secrets.GCLOUD_AUTH }}
       -
