--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       -
         name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@1.0.2
+        uses: docker/setup-buildx-action@v1.0.2
         with:
           driver-opts: image=moby/buildkit:buildx-stable-1
       -
