--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       -
         name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1.0.2
+        uses: docker/setup-buildx-action@v1.0.1
         with:
           driver-opts: image=moby/buildkit:buildx-stable-1
       -
@@ -23,7 +23,7 @@ jobs:
       -
         name: Get GCloud Credentials
         id: gcloud
-        uses: elgohr/gcloud-login-action@0.2
+        uses: elgohr/gcloud-login-action@master
         with:
           account_key: ${{ secrets.GCLOUD_AUTH }}
       -
@@ -36,7 +36,7 @@ jobs:
       -
         name: Build and push backend
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v1
         with:
           push: true
           file: backend/Dockerfile
