--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - 'main'
 
 jobs:
-  build:
+  build-test-deploy:
     runs-on: ubuntu-latest
     steps:
       -
@@ -42,13 +42,6 @@ jobs:
           tags: | 
             gcr.io/team25-avpd/gchristensen/avpd-backend:main.${{github.sha}}
       -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      -
         name: Deploy service to Cloud Run
         uses: stefda/action-cloud-run@v1.2
         with:
@@ -57,3 +50,6 @@ jobs:
           project: team-25-avpd
           region: us-west1
           service key: ${{ secrets.GCLOUD_AUTH }}
+      -
+        name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
