--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,14 +7,17 @@ WORKDIR /app
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
-# install app dependencies
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm install --silent
 RUN npm install react-scripts@3.4.1 -g --silent
 
-# add app
 COPY . ./
 
-# start app
-CMD ["npm", "start"]
+RUN npm run build
+
+# need serve to start app in production mode
+RUN npm install -g serve
+
+# start app in production mode
+CMD ["serve", "-s", "build"]
