--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Build and test
+        name: Build and test frontend
         id: docker_build_frontend
         uses: docker/build-push-action@v2
         with:
           load: true
-          context: frontend/
+          context: frontend
           tags: |
             gcr.io/team25-avpd/gchristensen/avpd-frontend-dev
       -
@@ -59,20 +59,20 @@ jobs:
           username: ${{ steps.gcloud.outputs.username }}
           password: ${{ steps.gcloud.outputs.password }}
       -
-        name: Build and test frontend
-        id: docker_build_frontend
+        name: Build and test backend
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
           load: true
-          context: frontend
-          tags: |
-            gcr.io/team25-avpd/gchristensen/avpd-frontend-dev
+          file: backend/Dockerfile
+          tags: | 
+            gcr.io/team25-avpd/gchristensen/avpd-backend-dev
       -
-        name: Deploy frontend to Cloud Run
+        name: Deploy backend to Cloud Run
         uses: stefda/action-cloud-run@v1.2
         with:
-          image: gcr.io/team25-avpd/gchristensen/avpd-frontend-dev
-          service: avpd-frontend-dev
+          image: gcr.io/team25-avpd/gchristensen/avpd-backend-dev
+          service: avpd-backend-dev
           project: team25-avpd
           region: us-west1
           service key: ${{ secrets.GCLOUD_AUTH }}
