--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           load: true
-          context: frontend
+          context: ./frontend
           tags: |
             gcr.io/team25-avpd/gchristensen/avpd-frontend-dev
       -
