--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,15 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.1",
+    "chokidar": "^3.5.1",
     "date-fns": "^2.19.0",
     "form-data": "^3.0.0",
     "gh-pages": "^3.1.0",
+    "mammoth": "^1.4.16",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "pdfjs-dist": "^2.6.347",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-doc-viewer": "^0.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
