--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^4.14.1",
     "pdfjs-dist": "^2.6.347",
     "react": "^17.0.1",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
