--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "pdfjs-dist": "^2.6.347",
+    "react": "16.14.0",
     "react-doc-viewer": "^0.1.0",
+    "react-dom": "16.14.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
