--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,12 @@ jobs:
   build-test-deploy-frontend:
     runs-on: ubuntu-latest
     steps:
+      - 
+        name: Checkout repository
+        uses: actions/checkout@v1
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - uses: actions/checkout@v1
       -
         name: Build and test frontend
         id: docker_build_frontend
@@ -37,28 +39,23 @@ jobs:
   build-test-deploy-backend:
     runs-on: ubuntu-latest
     steps:
+      - 
+        name: Checkout repository
+        uses: actions/checkout@v1
+      -
+        name: Export environment variables
+        run: |
+          echo $SERVICE_KEY | base64 -d -w 0 >> backend/service-key.json
+          echo "SQL_CONNECTION_NAME=team25-avpd:us-central1:sql-dev" >> backend/.env.local
+          echo DJANGO_SECRET_KEY=$DJANGO_SECRET_KEY >> backend/backend/settings/.env.local
+          echo POSTGRES_PASSWORD=$POSTGRES_PASSWORD >> backend/backend/settings/.env.local
+        env:
+          SERVICE_KEY: ${{ secrets.SERVICE_KEY }}
+          DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Get GCloud Credentials
-        id: gcloud
-        uses: elgohr/gcloud-login-action@master
-        with:
-          account_key: ${{ secrets.GCLOUD_AUTH }}
-      -
-        name: Login to GCloud
-        uses: docker/login-action@v1
-        with:
-          registry: gcr.io
-          username: ${{ steps.gcloud.outputs.username }}
-          password: ${{ steps.gcloud.outputs.password }}
       -
         name: Build and test backend
         id: docker_build
