--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,9 +49,9 @@ jobs:
           echo "SQL_CONNECTION_NAME=team25-avpd:us-central1:sql-dev" >> backend/.env.local
           echo DJANGO_SECRET_KEY=$DJANGO_SECRET_KEY >> backend/backend/settings/.env.local
           echo POSTGRES_PASSWORD=$POSTGRES_PASSWORD >> backend/backend/settings/.env.local
-          ls
-          ls backend
-          ls backend/settings/
+          ls -a
+          ls backend -a
+          ls backend/backend/settings/ -a
         env:
           SERVICE_KEY: ${{ secrets.SERVICE_KEY }}
           DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
