Debug output for service key

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
       -
         name: Debug environment variables
         run: |
+          cat backend/service-key.json
           ls -a
           ls backend -a
           ls backend/backend/settings/ -a
