--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,15 @@ jobs:
         name: Checkout repository
         uses: actions/checkout@v1
       -
+        name: Set up service key
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.GCLOUD_AUTH }}
+          export_default_credentials: true
+          credentials_file_path: backend/service-key.json
+      -
         name: Export environment variables
         run: |
-          echo $SERVICE_KEY | base64 -d -w 0 >> backend/service-key.json
           echo "SQL_CONNECTION_NAME=team25-avpd:us-central1:sql-dev" >> backend/.env.local
           echo DJANGO_SECRET_KEY=$DJANGO_SECRET_KEY >> backend/backend/settings/.env.local
           echo POSTGRES_PASSWORD=$POSTGRES_PASSWORD >> backend/backend/settings/.env.local
